--- a/src/Chat.css
+++ b/src/Chat.css
@@ -49,3 +49,48 @@
     width: fit-content;
     margin-bottom: 30px;
 }
+.chat__name{
+    position: absolute;
+    top: -15px ;
+    font-weight: 800;
+    font-size: xx-small;
+
+}
+.chat__timestamp{
+    margin-left: 10px;
+    font-size: xx-small;
+}
+.chat__reciver{
+   margin-left: auto; 
+   background-color: #dcf8c6 ;
+}
+
+.chat__footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+    border-top: 1px solid lightgray;
+}
+
+.chat__footer>form{
+    flex: 1;
+    display: flex;
+  
+}
+
+.chat__footer>form>input{
+    flex: 1;
+    border-radius: 30px ;
+    padding: 10px;
+    border: none;
+}
+.chat__footer>form>button{
+    display: none;
+}
+
+.chat__footer>.MuiSvgIcon-root{
+    padding: 10px;
+    color: gray;
+    
+}
